--- a/SalesApplication/SalesApplication/frmAddInventory.resx
+++ b/SalesApplication/SalesApplication/frmAddInventory.resx
@@ -117,4 +117,39 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="PictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAI
+        2AAACNgBYBXYLgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAWuSURBVHhe7Ztd
+        qFRVFMfnfpB1sy/Ii31ABvZBDyq3XqLSjCIoooKolwqJzLIXowv5EBQR0UNh3cqHqOxBgogeIoqe6toH
+        KoUKgvSg9VB2kUw00yyx6bemvS/77rXm3D1n9p05w7Thx5zzX/tjrf/MnHNm5kytXq/3NabYT5hiP2GK
+        /YQpzsbAwMBn8IEVEwYHB98aGhqarNVqg3EM/R7ie4mNxTGB2BOwh/ioFc+NKRZBO4cE6wLb86w+xP50
+        8UuM2CY3/qk4JmDQVonzeKcVz40pFkE71xUgO6dbfYidcPFFRuxdN359HBMofJvEebzLiufGFD2084eH
+        h28lmVUeklvrCpAkV4cxD7GTrs+4Ef9aYvIWMmIydp8bOxHFHiSf62DEyrUstlirDZDAevjLJVMlpjDj
+        divvMpgiizwWLVo1/uZJWmrl3iqmyAIHg8UO4vhkwFc+xvYWXspfxBA75eJbjdiUG78vjrn4ERffHepu
+        3elXJNqHVu6togWO3H4ROMn+wijetYMgmpxCfW4/xvEyaKFWWxYsctiIz0OX09wRtofiuEBsP4h55xmx
+        DdA4gMYxgWf2E4kz9oY4RivMrQxaSFiEM8ON9LvWigm0Mfrc0iS2gOLv59F89dAWEb+XxwEjVg0DusX/
+        BszM7ZDVp1W00BsGnJK3UaCfxv7D7vixVvbDcUVoofoGSPGrAm0++9OnZgEjPkJPMkEL1TZgCcU+FOyr
+        4j2pJmihwgaEFBXvSTFBC4kGEHsc9sD3GdnF6fMma70Y2mL6+6vKpsxmghbSDXg76JeLf2CNtZ6HNgKN
+        K0zalfRvywQttPAWoI3CwoyoK8cQ2gjFfE5eP7O92GlJJsCb8XyN8Uqo6DGA5ov3uYkJl7lYignH6Tdf
+        zauEChpAi4v37CeWasIB+pyh5lZCxQygSfHyMfko2ytgeZCfICZc7voWmbAunrsxRgkVMoAWFn+9aGxP
+        BPl5ZjNhQzhviBYqchCkncl5fpIcpPjGR2O2Xwlyi/mFfle4saEJTYsXtJBoALE5Ow2Sgy/+D7ZTivfE
+        Jjwb5myhhUQDSPAR4jtgVy6YcxvcZhT/KoSFFjElxcf5NkMLXTwG0OSZ38K6Uvxy0dhupXjPM/HczdBC
+        lwzIWHzhez5GC10wICp+hWhsW0f72WipeEELHTaAJp/qvmStjhcvaKGDBjQp/rVg/VRKFS9ooUMGuOLl
+        8/wx+ZZZNLY7WryghUQDaNcQfwFeLAPFb+cxLP51CAtLoa3iBS0kGsAlauMHjDboevGCFtJfAfIDhlwM
+        PdoC43BMoPiVMg/bb0BYWApZihe0MEfHAFr4nl/JvvwE39XiBS3MgQFNit8YrJPKdPG0i8M1yqKFzAbQ
+        fPEy30vs5yhevhDdHa5TFi1kNoCD5afBfD9gRuPn7xaJi/8J8rw6lZDRAJqcKsNCyhAWv4B9KV706hvA
+        eLlO8HOVYcYBL2duHi3kNUB+7JBnTO4sky87/LwpzChe6CkDaFe5OSZkn0e58SrVBFW8kCu3EC1kWoSx
+        T8sc/oLHaSkmmMULvWaAfF32K/PNuI8IrciEpsULPWMA7VIZzylvO9vqRipilgmFxQs5covRQoZFGPdk
+        MMfm0ATaKMasRpc7yXyfWYsXcuQWo4UMi1DgN8EcwnuwDl2+/GjcRAknuEj6GO1uaw6LnjCAdgHjmr3H
+        j8L7FH0f/c6yxhfRbm4WWmhzEcbE9xn/Bpso+g7mNu8NTKUnDKDQBxi3FzZyCryZ+YatfmXolAFLgkV+
+        j+PdhDYW5DZn9wmezeThe3gcbVkCS2HGX2hoF7lYDq4ml80+L15p34VrlcUUmbzxr44SHAb5T9DLzPFt
+        oM8Fz1u5t4ot/vfL6qFowSqxgxzbOqB6TFGgXchC74Ac0OT+/25zHHbCc+Rm/lutDKbYT5hiP2GK/YQp
+        9g/12r+GBItcR+gFNAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="StatusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
